--- a/example/theme/index.css
+++ b/example/theme/index.css
@@ -1,28 +1,43 @@
-﻿* {
+﻿:root {
+    --brand-color: #7d2ae8;
+}
+
+* {
     box-sizing: border-box;
+}
+
+html {
+    font-family: 'Lato', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 
 body {
     margin: 0;
 }
 
-header {
-    color: white;
-    background-color: black;
+h2 {
+    padding-bottom: 0;
+
+}
+
+main article header {
+    width: 100%;
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
 }
 
 nav {
     width: 100%;
     display: flex;
     flex-direction: row;
+    color: white;
+    background-color: black;
 }
 
-div {
-    display: flex;
-    align-items: center;
-}
-
-a {
+nav > * {
+    user-select: none;
+    cursor: pointer;
     display: inline-block;
     padding: 10px 16px;
     vertical-align: middle;
@@ -30,11 +45,58 @@ a {
     font-size: 17px;
     line-height: 1.4;
     font-family: 'Source Sans Pro', sans-serif;
+    text-transform: uppercase;
 }
 
-.nav-item-selected {
-    background-color: red;
+nav > div {
+    flex-grow: 1;
 }
+
+/*nav a:visited {*/
+/*    color: white;*/
+/*}*/
+
+nav a {
+    color: white;
+}
+
+nav a:hover, .nav-a-current {
+    background-color: var(--brand-color);
+}
+
+main {
+    top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 0;
+}
+
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.post-meta {
+    color: #999;
+    font-size: 0.75em;
+    margin: 4px 0 4px 0;
+    text-align: center;
+}
+
+.post-meta-item {
+
+}
+
+.post-meta .post-meta-item + .post-meta-item::before {
+    content: '|';
+    margin: 0 0.5em;
+}
+
+/*div {
+    display: flex;
+    align-items: center;
+}*/
 
 .a {
     width: 25%;
@@ -56,18 +118,53 @@ a {
 
 @media only screen and (min-width: 768px) {
     /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+    .col-1 {
+        width: 8.33%;
+    }
+
+    .col-2 {
+        width: 16.66%;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-4 {
+        width: 33.33%;
+    }
+
+    .col-5 {
+        width: 41.66%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.33%;
+    }
+
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
 }
 
 [class*="col-"] {
