--- a/example/theme/index.css
+++ b/example/theme/index.css
@@ -42,10 +42,21 @@ main article header {
 
 nav {
     width: 100%;
+    color: white;
     display: flex;
     flex-direction: row;
-    color: white;
     background-color: black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (min-width: 750px) {
+    nav {
+        max-width: 750px;
+    }
+    main {
+        max-width: 750px;
+    }
 }
 
 nav > * {
@@ -78,6 +89,8 @@ nav a:hover, .nav-a-current {
 }
 
 main {
+    margin-left: auto;
+    margin-right: auto;
     padding: 16px 16px 0;
 }
 
